:white_check_mark: Update deprecated tests
Update the deprecations to the correct imports and packagingOptions
for compiling correctly

--- a/libraries/theme/build.gradle
+++ b/libraries/theme/build.gradle
@@ -8,4 +8,9 @@ android {
             freeCompilerArgs += ["-Xallow-jvm-ir-dependencies", "-Xskip-prerelease-check"]
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
