--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ android {
 
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+}
+
 dependencies {
     implementation project(":libraries:core")
     implementation project(":libraries:navigation")
