:sparkles: Improve the Task Section screen
Update the Task Section screen to fetch the data from the ViewModel and
load dynamically all the changes in the datasource.
Some minor visual changes were also made to give a better look and feel.

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation Deps.android.playCore
 
     implementation Deps.koin.viewModel
+    implementation Deps.koin.compose
 
     implementation Deps.groupie.core
     implementation Deps.groupie.ktx
