--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,14 +1,19 @@
 name: Run Automated Tests
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build:
     runs-on: macos-latest
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Setup Java
+        uses: actions/setup-java@v1.4.3
+        with:
+          java-version: '11'
 
       - name: Android Emulator Runner
         uses: ReactiveCircus/android-emulator-runner@v2.13.0
