:green_heart: Update Travis to compile with AGP 7.0
Update Travis file to keep working.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,38 @@
-language: android
+language: java
 dist: focal
-android:
-  components:
-    - tools
-    - platform-tools
-    - build-tools-29.0.2
-    - android-29
-    - extra-android-m2repository
-    - extra-google-m2repository
-jdk:
-  - openjdk11
-  - oraclejdk11
-script:
-  - ./gradlew clean build
+jdk: oraclejdk11
+
 before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  # Do not cache a few Gradle files/directories (see https://docs.travis-ci.com/user/languages/java/#Caching)
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
-    - $HOME/.m2
+    # Android SDK
+    - $HOME/android-cmdline-tools
+    - $HOME/android-sdk
+
+    # Gradle dependencies
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-before_install:
-  - yes | sdkmanager "platforms;android-29"
-  - yes | sdkmanager "platforms;android-28"
+
+    # Android build cache (see http://tools.android.com/tech-docs/build-cache)
+    - $HOME/.android/build-cache
+
+install:
+  # Download and unzip the Android command line tools (if not already there thanks to the cache mechanism)
+  # Latest version of this file available here: https://developer.android.com/studio/#command-tools
+  - if test ! -e $HOME/android-cmdline-tools/cmdline-tools.zip ; then curl https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip > $HOME/android-cmdline-tools/cmdline-tools.zip ; fi
+  - unzip -qq -n $HOME/android-cmdline-tools/cmdline-tools.zip -d $HOME/android-cmdline-tools
+
+  # Install or update Android SDK components (will not do anything if already up to date thanks to the cache mechanism)
+  - echo y | $HOME/android-cmdline-tools/tools/bin/sdkmanager --sdk_root=$HOME/android-sdk 'platform-tools' > /dev/null
+  # Latest version of build-tools available here: https://developer.android.com/studio/releases/build-tools.html
+  - echo y | $HOME/android-cmdline-tools/tools/bin/sdkmanager --sdk_root=$HOME/android-sdk 'build-tools;29.0.3' > /dev/null
+  - echo y | $HOME/android-cmdline-tools/tools/bin/sdkmanager --sdk_root=$HOME/android-sdk 'platforms;android-29' > /dev/null
+
+env:
+  - ANDROID_HOME=$HOME/android-sdk
+
+script: ./gradlew --no-daemon --parallel build
