:arrow_up: Update all V2 related dependencies
Compose, Gradle and Kotlin dependencies updated in order to keep the
development.

At the moment is very difficult to the project compile and keep passing
in the CI, so this commit will go directly to V2 branch. When Google
fix their issues, I can proceed and make the CI pass again.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,10 +69,6 @@ android {
 
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-    kotlinOptions.freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
-}
-
 dependencies {
     implementation project(":libraries:core")
     implementation project(":libraries:navigation")
@@ -112,4 +108,6 @@ dependencies {
     androidTestImplementation Deps.test.espresso.contrib
     androidTestImplementation Deps.test.junitExt
     androidTestImplementation Deps.test.uiAutomator
+    androidTestImplementation Deps.compose.uiTest
+    androidTestImplementation Deps.compose.junit4
 }
