:sparkles: Create a Navigation flow using official library
Jetpack Compose Navigation added in the project and created a simple
navigation flow using it. Next commits will fix the bottom app bar flow.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation Deps.android.navigation.ui
     implementation Deps.android.lifecycle.viewmodel
     implementation Deps.android.playCore
+    implementation Deps.compose.navigation
 
     implementation Deps.timber
 
