:white_check_mark: Update and create tests for TaskListViewModel
Update the shameful test that was created and updated with better ones.
The next commit will introduce better state handle so the tests will
be updated as well.

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -7,6 +7,10 @@ android {
         experimental = true
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     packagingOptions {
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
