:sparkles: Create Error screen for the TaskDetail
First of all, the default/generic component was moved to :theme module
once it will probably be used in other screen as an error.
After that, the change simply added it in TaskDetail and updated the
other references to the new component.

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -13,7 +13,7 @@ style:
   DataClassShouldBeImmutable:
     active: false
   MagicNumber:
-    excludes: ['**/theme/*.kt', '**/test/**','**/androidTest/**', '**/presentation/**']
+    excludes: ['**/theme/**', '**/test/**','**/androidTest/**', '**/presentation/**']
 
 potential-bugs:
   UnsafeCallOnNullableType:
