:fire: Remove all navigation-related code
Let's clean up the project and removing this code will make it easier
to clean dependencies.

--- a/features/alarm/build.gradle
+++ b/features/alarm/build.gradle
@@ -8,10 +8,10 @@ android {
 
 dependencies {
     implementation project(":libraries:core")
-    implementation project(":libraries:navigation")
     implementation project(":data:domain")
 
     implementation Deps.coroutines.core
+    implementation Deps.android.navigation.ui
 
     implementation Deps.koin.core
 
