:fire: Remove more unused dependencies and extensions
The cleanup goes on...

--- a/libraries/core/build.gradle
+++ b/libraries/core/build.gradle
@@ -1,12 +1,8 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 
 dependencies {
-    implementation Deps.android.recyclerView
-    implementation Deps.android.material
     implementation Deps.android.ktx
-    implementation Deps.android.navigation.fragment
-
+    implementation Deps.android.material
     implementation Deps.coroutines.core
-
-    implementation Deps.koin.viewModel
+    implementation Deps.koin.core
 }
