--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,18 @@ dependencies {
     implementation Deps.koin.core
     implementation Deps.timber
 
-    androidTestImplementation Deps.compose.uiTest
-    androidTestImplementation Deps.compose.junit4
+    androidTestImplementation(Deps.compose.uiTest) {
+        exclude group: "androidx.core", module: "core-ktx"
+        exclude group: "androidx.fragment", module: "fragment"
+        exclude group: "androidx.customview", module: "customview"
+        exclude group: "androidx.activity", module: "activity"
+        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
+    }
+    androidTestImplementation(Deps.compose.junit4) {
+        exclude group: "androidx.core", module: "core-ktx"
+        exclude group: "androidx.fragment", module: "fragment"
+        exclude group: "androidx.customview", module: "customview"
+        exclude group: "androidx.activity", module: "activity"
+        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
+    }
 }
