✅ Update and create new test
Simple naming updates for the existing ones and a new one created to
validate if the task title is single line.
A new SemanticsMatcher was created to help this assertions and was
moved to the :test module.

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation project(":libraries:theme")
 
     testImplementation project(":libraries:test")
+    androidTestImplementation project(":libraries:test")
 
     implementation Deps.android.playCore
 
