--- a/libraries/test/build.gradle
+++ b/libraries/test/build.gradle
@@ -5,6 +5,11 @@ android {
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+        useIR = true
+    }
 }
 
 dependencies {
@@ -13,4 +18,12 @@ dependencies {
     api Deps.test.junit
 
     api Deps.coroutines.test
+
+    implementation(Deps.compose.uiTest) {
+        exclude group: "androidx.core", module: "core-ktx"
+        exclude group: "androidx.fragment", module: "fragment"
+        exclude group: "androidx.customview", module: "customview"
+        exclude group: "androidx.activity", module: "activity"
+        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
+    }
 }
