--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     implementation Deps.koin.viewModel
     implementation Deps.koin.compose
 
-    androidTestImplementation Deps.espresso.core
-    androidTestImplementation Deps.espresso.contrib
+    testImplementation Deps.test.coreKtx
+    androidTestImplementation Deps.test.barista
 }
