✨ Create a simple Composable function for Search screen
A new simple Composable function created and integrated in the Home
screen. Next steps are coming fast! :D

--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -1,7 +1,16 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
+apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
+
+android {
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
+}
 
 dependencies {
     implementation project(":data:domain")
+    implementation project(":libraries:theme")
 
     implementation Deps.koin.viewModel
 }
