--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -9,6 +9,7 @@ android {
 }
 
 dependencies {
+    implementation project(":libraries:core")
     implementation project(":data:domain")
     implementation project(":libraries:theme")
 
