✅ Add test to SearchViewModel
Like the previous commit, the code was ported from V1 but removed the
mocks.
As a bonus, some unused Coroutines Test Dispatcher were removed from
TaskDetailViewModelTest.

--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -2,6 +2,10 @@ apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
 
 android {
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     packagingOptions {
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
@@ -14,4 +18,6 @@ dependencies {
     implementation project(":libraries:theme")
 
     implementation Deps.koin.viewModel
+
+    testImplementation project(":libraries:test")
 }
