✨ Implement basic Search screen behavior
For now the basic structure to observe states and the empty list screen
were created. Next commit will implement the search list.

--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation project(":libraries:theme")
 
     implementation Deps.koin.viewModel
+    implementation Deps.koin.compose
 
     testImplementation project(":libraries:test")
 }
