✅ Add test to SearchSection
Some simple tests to validate state and behavior added.

--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     implementation Deps.koin.compose
 
     testImplementation project(":libraries:test")
+    androidTestImplementation project(":libraries:test")
 }
