✨ Implement About navigation
Navigation updated to create a node for About screen and associate it
with Home screen.

--- a/features/preference/build.gradle
+++ b/features/preference/build.gradle
@@ -1,6 +1,17 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
 
+android {
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
+}
+
 dependencies {
     implementation project(":libraries:core")
     implementation project(":libraries:theme")
