♻️ Replace Koin to Hilt
Replace all the injections from Koin to Hilt.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,8 @@ apply plugin: "com.android.application"
 
 apply from: "$rootDir/config/dependencies/android_dependencies.gradle"
 apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
+apply from: "$rootDir/config/dependencies/hilt_dependencies.gradle"
 apply from: "$rootDir/config/artifacts.gradle"
-
-apply plugin: "kotlin-kapt"
 
 android {
     defaultConfig {
