--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,7 @@ buildscript {
     dependencies {
         classpath Deps.gradle.buildGradle
         classpath Deps.gradle.kotlinGradle
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath Deps.hilt.gradlePlugin
     }
 }
 
