--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -1,5 +1,5 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
-apply plugin: "kotlin-kapt"
+apply from: "$rootDir/config/dependencies/hilt_dependencies.gradle"
 
 android {
     defaultConfig {
