--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -1,4 +1,5 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
+apply from: "$rootDir/config/dependencies/hilt_dependencies.gradle"
 
 dependencies {
     implementation project(":data:domain")
