--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -1,5 +1,6 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
+apply from: "$rootDir/config/dependencies/hilt_dependencies.gradle"
 
 android {
     testOptions {
