--- a/features/tracker/build.gradle
+++ b/features/tracker/build.gradle
@@ -1,4 +1,5 @@
 apply from: "$rootDir/config/dependencies/dynamic_dependencies.gradle"
+apply from: "$rootDir/config/dependencies/hilt_dependencies.gradle"
 
 dependencies {
     implementation project(":data:domain")
