⬆️ Upgrade Compose to latest
Compose dependency updated to beta-01 and Kotlin to 1.4.30. Yay!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation project(":features:search")
 
     implementation Deps.compose.navigation
+    implementation Deps.compose.activity
     implementation Deps.android.playCore
     implementation Deps.timber
 }
