--- a/config/dependencies/compose_dependencies.gradle
+++ b/config/dependencies/compose_dependencies.gradle
@@ -9,7 +9,6 @@ android {
         freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
         // Enable experimental coroutines APIs, including Flow
         freeCompilerArgs += '-Xopt-in=kotlin.Experimental'
-        freeCompilerArgs += '-Xallow-jvm-ir-dependencies'
 
         // Set JVM target to 1.8
         jvmTarget = "1.8"
@@ -26,19 +25,8 @@ dependencies {
     implementation Deps.compose.ui
     implementation Deps.compose.material
     implementation Deps.compose.tooling
+    implementation Deps.compose.viewModel
 
-    androidTestImplementation(Deps.compose.uiTest) {
-        exclude group: "androidx.core", module: "core-ktx"
-        exclude group: "androidx.fragment", module: "fragment"
-        exclude group: "androidx.customview", module: "customview"
-        exclude group: "androidx.activity", module: "activity"
-        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
-    }
-    androidTestImplementation(Deps.compose.junit4) {
-        exclude group: "androidx.core", module: "core-ktx"
-        exclude group: "androidx.fragment", module: "fragment"
-        exclude group: "androidx.customview", module: "customview"
-        exclude group: "androidx.activity", module: "activity"
-        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
-    }
+    androidTestImplementation(Deps.compose.uiTest)
+    androidTestImplementation(Deps.compose.junit4)
 }
