--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -26,4 +26,5 @@ dependencies {
 
     testImplementation Deps.test.coreKtx
     androidTestImplementation Deps.test.barista
+    androidTestImplementation Deps.compose.activity
 }
