⚗ Implement hiltNavGraphViewModel to get ViewModels from Navigation
A temporary code was shamelessly copied from Ian Lake's comment until
the library hilt-navigation-compose is not release with the final code.
This change allows getting the ViewModels from Hilt using Jetpack
Navigation.
When the library is launched, it must be removed and updated with
correct syntax.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation Deps.compose.activity
     implementation Deps.android.playCore
     implementation Deps.timber
+
+    implementation Deps.hilt.navigation
 }
