--- a/config/dependencies/compose_dependencies.gradle
+++ b/config/dependencies/compose_dependencies.gradle
@@ -27,6 +27,19 @@ dependencies {
     implementation Deps.compose.tooling
     implementation Deps.compose.viewModel
 
-    androidTestImplementation(Deps.compose.uiTest)
-    androidTestImplementation(Deps.compose.junit4)
+
+    androidTestImplementation(Deps.compose.uiTest) {
+        exclude group: "androidx.core", module: "core-ktx"
+        exclude group: "androidx.fragment", module: "fragment"
+        exclude group: "androidx.customview", module: "customview"
+        exclude group: "androidx.activity", module: "activity"
+        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
+    }
+    androidTestImplementation(Deps.compose.junit4) {
+        exclude group: "androidx.core", module: "core-ktx"
+        exclude group: "androidx.fragment", module: "fragment"
+        exclude group: "androidx.customview", module: "customview"
+        exclude group: "androidx.activity", module: "activity"
+        exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
+    }
 }
