--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     implementation Deps.koin.compose
 
     testImplementation Deps.test.coreKtx
+    androidTestImplementation Deps.compose.activity
     androidTestImplementation Deps.test.barista
 }
