✨ Implement Add Task Bottom Sheet
New Bottom Sheet implementation created with the basic flow and
behavior.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
 
         <activity
             android:name="com.escodro.alkaa.presentation.MainActivity"
-            android:theme="@style/Theme.Alkaa">
+            android:theme="@style/Theme.Alkaa"
+            android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
