✨ Integrate CategorySelection in TaskList
Integration done and now it is possible to filter the tasks by category
right in the main screen.

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -1,5 +1,6 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
+apply plugin: "kotlin-parcelize"
 
 android {
     testOptions {
