⬆️ Upgrade Koin to latest Beta
Koin upgraded to latest beta version, which fixes the issue regarding
ViewModel and Jetpack Compose. In addition, the ViewModel injection
workaround was removed.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,6 @@ dependencies {
     implementation Deps.compose.navigation
     implementation Deps.compose.activity
     implementation Deps.android.playCore
-    implementation Deps.koin.core
+    implementation Deps.koin.android
     implementation Deps.timber
 }
