--- a/libraries/core/build.gradle
+++ b/libraries/core/build.gradle
@@ -4,5 +4,5 @@ dependencies {
     implementation Deps.android.ktx
     implementation Deps.android.material
     implementation Deps.coroutines.core
-    implementation Deps.koin.core
+    implementation Deps.koin.android
 }
