--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation project(":libraries:core")
     implementation project(":data:repository")
 
-    implementation Deps.koin.core
+    implementation Deps.koin.android
     implementation Deps.android.room.runtime
     implementation Deps.android.room.ktx
     kapt Deps.android.room.compiler
