--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -3,6 +3,6 @@ apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 dependencies {
     implementation project(":data:domain")
 
-    implementation Deps.koin.core
+    implementation Deps.koin.android
     implementation Deps.coroutines.core
 }
