--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include ':libraries:splitInstall'
 include ':libraries:theme'
 include ':features:alarm'
 include ':features:task'
+include ':features:category-api'
 include ':features:category'
 include ':features:preference'
 include ':features:tracker'
