✨ Create representations of Category-related classes in API module
The main classes were extracted in representations and moved to the
API module. Some refactoring and reference updates were needed.

--- a/features/category-api/build.gradle
+++ b/features/category-api/build.gradle
@@ -1,1 +1,8 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
+apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
+
+dependencies {
+    implementation project(":data:domain")
+
+    implementation Deps.koin.android
+}
