✨ Implement ViewModel to Add Category
ViewModel implemented with TDD to Add Category, based on the one
available in V1.

--- a/features/category/build.gradle
+++ b/features/category/build.gradle
@@ -13,6 +13,7 @@ android {
 }
 
 dependencies {
+    implementation project(":libraries:core")
     implementation project(":features:category-api")
     implementation project(":data:domain")
     implementation project(":libraries:theme")
