♻️ Refactor BottomSheet display mechanism
Mechanism to show different BottomSheet based on which tab is opened is
now refactored to better hoist the components and allowing orientation
changes without losing the view displayed.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply from: "$rootDir/config/dependencies/compose_dependencies.gradle"
 apply from: "$rootDir/config/artifacts.gradle"
 
 apply plugin: "kotlin-kapt"
+apply plugin: "kotlin-parcelize"
 
 android {
     defaultConfig {
