--- a/features/category-api/build.gradle
+++ b/features/category-api/build.gradle
@@ -1,4 +1,5 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
+apply plugin: "kotlin-parcelize"
 
 dependencies {
     implementation project(":data:domain")
