✨ Add DeepLink to Notification work with Compose Navigation
Now in Compose all the communication between composables are made via
Deeplink instead of NavDeepLinkBuilder. So the Manifest was updated
to have a dedicated deep link and the Composable for TaskDetail was
updated.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,24 @@
 
         <activity
             android:name="com.escodro.alkaa.presentation.MainActivity"
+            android:exported="true"
             android:theme="@style/Theme.Alkaa"
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="com.escodro.alkaa"
+                    android:scheme="app" />
             </intent-filter>
 
         </activity>
