✨ Create a new module for Navigation content
New module created to contain the URIs and nodes for the navigation.

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include ':libraries:core'
 include ':libraries:test'
 include ':libraries:splitInstall'
 include ':libraries:theme'
+include ':libraries:navigation'
 include ':features:alarm'
 include ':features:task'
 include ':features:category-api'
