✨ Move Navigation-related content to new module
All the Navigation destinations were moved to the new module to avoid
hard-coded URIs all over the project.

--- a/features/alarm/build.gradle
+++ b/features/alarm/build.gradle
@@ -8,6 +8,7 @@ android {
 
 dependencies {
     implementation project(":libraries:core")
+    implementation project(":libraries:navigation")
     implementation project(":data:domain")
 
     implementation Deps.coroutines.core
