--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation project(":libraries:core")
     implementation project(":libraries:splitInstall")
     implementation project(":libraries:theme")
+    implementation project(":libraries:navigation")
     implementation project(":data:local")
     implementation project(":data:repository")
     implementation project(":data:domain")
