🍱 Update app icons
New dependency added to include more Material icons and the application
icons were updated. Also, for now the "Settings" tab was renamed to
"More" once the Tracker will be there.

--- a/config/dependencies/compose_dependencies.gradle
+++ b/config/dependencies/compose_dependencies.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation Deps.compose.ui
     implementation Deps.compose.material
     implementation Deps.compose.tooling
+    implementation Deps.compose.icons
 
     androidTestImplementation(Deps.compose.uiTest) {
         exclude group: "androidx.core", module: "core-ktx"
