--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     implementation Deps.android.playCore
     implementation Deps.koin.android
     implementation Deps.timber
+
+    testImplementation project(':libraries:test')
 }
