✅ Remove flakiness from AlarmSelectionTest
Add the Test Rule to disable animations when using components from
Android View System. Also a sleep was added in order to wait for the
Android View dialog load. For sure it is not the best approach, however
when a proper Compose dialog is launched, this problem will not happen.

--- a/libraries/test/build.gradle
+++ b/libraries/test/build.gradle
@@ -26,4 +26,7 @@ dependencies {
         exclude group: "androidx.activity", module: "activity"
         exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
     }
+
+    implementation Deps.test.core
+    implementation Deps.test.uiAutomator
 }
