🚚 Move Domain module from Data Module
After some time thinking about this change, I believe that makes sense
to move the Domain module from the Data Module to the project root. Once
it contains the business rule and does not store any "data", it is best
to have their own solo module. Also, I think this better adheres to the
Hexagonal Architecture model.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation project(":libraries:navigation")
     implementation project(":data:local")
     implementation project(":data:repository")
-    implementation project(":data:domain")
+    implementation project(":domain")
     implementation project(":features:task")
     implementation project(":features:alarm")
     implementation project(":features:category-api")
