--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,4 @@
 include ':app'
-include ':libraries:core'
-include ':libraries:test'
-include ':libraries:splitInstall'
-include ':libraries:theme'
-include ':libraries:navigation'
 include ':features:alarm'
 include ':features:task'
 include ':features:category-api'
@@ -11,6 +6,11 @@ include ':features:category'
 include ':features:preference'
 include ':features:tracker'
 include ':features:search'
-include ':data:local'
-include ':data:domain'
+include ':domain'
 include ':data:repository'
+include ':data:local'
+include ':libraries:core'
+include ':libraries:test'
+include ':libraries:splitInstall'
+include ':libraries:theme'
+include ':libraries:navigation'
