--- a/features/category/build.gradle
+++ b/features/category/build.gradle
@@ -17,7 +17,7 @@ android {
 dependencies {
     implementation project(":libraries:core")
     implementation project(":features:category-api")
-    implementation project(":data:domain")
+    implementation project(":domain")
     implementation project(":libraries:theme")
 
     testImplementation project(":libraries:test")
