--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -14,7 +14,7 @@ android {
 
 dependencies {
     implementation project(":libraries:core")
-    implementation project(":data:domain")
+    implementation project(":domain")
     implementation project(":libraries:theme")
 
     implementation Deps.koin.android
