--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -16,7 +16,7 @@ android {
 dependencies {
     implementation project(":features:category-api")
     implementation project(":libraries:core")
-    implementation project(":data:domain")
+    implementation project(":domain")
     implementation project(":libraries:theme")
 
     testImplementation project(":libraries:test")
