🚚 Rename "Theme" module to "Design system"
Since the module contains more components and logic based on how the
application look and feel should behave, I believe that is better to
name it "Design System" in order to better reflect its importance and
content.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ android {
 dependencies {
     implementation project(":libraries:core")
     implementation project(":libraries:splitInstall")
-    implementation project(":libraries:theme")
+    implementation project(':libraries:designsystem')
     implementation project(":libraries:navigation")
     implementation project(":data:local")
     implementation project(":data:repository")
