⬆️ Upgrade Compose dependencies to latest version
Compose updated from 1.0.0-alpha04 to alpha05.

--- a/config/dependencies/compose_dependencies.gradle
+++ b/config/dependencies/compose_dependencies.gradle
@@ -33,4 +33,6 @@ dependencies {
         exclude group: "androidx.activity", module: "activity"
         exclude group: "androidx.lifecycle", module: "lifecycle-runtime"
     }
+
+    androidTestImplementation Deps.compose.manifest
 }
