✅ Add more integration tests for flows
Add more tests for flows in the application

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     implementation Deps.android.playCore
     implementation Deps.koin.android
     implementation Deps.timber
+
+    androidTestImplementation project(":libraries:test")
+    androidTestImplementation Deps.koin.test
 }
